# clear-downloader

./: .gitignore  PLAN-2A-vs-PR-Reconciliation.md  PLAN-2B-vs-PR-Reconciliation.md  PLAN-6A-vs-PR-Reconciliation.md  PLAN-8A-vs-PR-Reconciliation.md  PLAN-EInvoice-vs-SR.md  PLAN-gstr-1-1a-vs-3b-vs-books.md  PLAN-gstr-2a-vs-3b-vs-books.md  PLAN-pan-cash-ledger.md  PLAN-pan-ecrrs.md  PLAN-pan-itc-ledger.md  README.md  analyze_failures.py  config.yaml  pyproject.toml
discovery/: 2b-export-trigger-body.json  FINDINGS.md  HOW-TO-CAPTURE.md  NOTES.md  debug_trigger.py  extract_auth.py  extract_bodies.py  extract_gstr8.py  gstr1-doc-export-trigger-body.json  gstr1_updated_export_1.json  gstr1_updated_export_2.json  har_extract_1_1a_vs_3b_call_1_headers.json  har_extract_1_1a_vs_3b_call_2_headers.json  har_extract_1vs3b_preflight.json  har_extract_1vs3b_real.json  parse_har.py  scan_1_1a_vs_3b_vs_books.py
discovery/gstr8-extracted/: gstr8_01-pull-trigger.json  gstr8_02-pull-status.json  gstr8_03-rls-fetch-token.json  gstr8_04-export-trigger.json  gstr8_07-other.json
discovery/reference-bodies/: 01-pull-prefetchStatus.json  02-pull-v2-trigger.json  03-pull-v3-status.json  04-rls-fetch-token.json  05-export-trigger.json  06-export-download.json  07-recent-reports.json  08-user-gstins.json
discovery/screenshots/: README.txt
src/clear_ola/: __init__.py  __main__.py  api.py  cli.py  config.py  cookies.py  gst_manifest.py  manifest.py  partials.py  status_report.py
src/clear_ola/flows/: gstr_1.py  gstr_1_1a_vs_3b_vs_books.py  gstr_1_1a_vs_3b_vs_books_preflight_statement.json  (+33 more)
(+11 files in other folders)
